tests/negative/b10_path_reserved.lator
let r be path from A to B where distance is min
